--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -359,10 +359,10 @@ log-probabilities.)
 \parencite{lunn2000winbugs,lunn2009bugs}.  Others are specified in the \enquote{meta-syntax} of Lisp
 S-expressions, as Church \parencite{goodman2012church}, Anglican \parencite{wood2015new}, or Venture
 \parencite{mansinghka2014venture}.  A third group is embedded into host programming languages with
-sufficient syntactic flexibility, for example Gen
-\parencite{cusumano-towner2019gen,cusumano-towner2020gen} and Soss \parencite{scherrer2019soss} in
-Julia (besides the already named \turingjl{}), or Pyro \parencite{bingham2018pyro} and PyMC3
-\parencite{salvatier2016probabilistic} in Python.
+sufficient syntactic flexibility, for example \juliapackage{Gen.jl}
+\parencite{cusumano-towner2019gen,cusumano-towner2020gen} and \juliapackage{Soss.jl}
+\parencite{scherrer2019soss} in Julia (besides the already named \turingjl{}), or Pyro
+\parencite{bingham2018pyro} and PyMC3 \parencite{salvatier2016probabilistic} in Python.
 
 The latter approach is advantageous when one wants to enable the use of regular, general-purpose
 programming constructs or interact with other functionalities of the host language.  There are also
