--- a/thesis/colophon.tex
+++ b/thesis/colophon.tex
@@ -9,7 +9,7 @@
   % TikZ/PGF, and source code examples are formatted by the listings package.
 
   The document source has been written in Emacs with AUC\TeX{} mode, using TeXworks as \abbrev{PDF}
-  viewer.  Figures were created in Inkscape, and plotting done in R using ggplot2.
+  viewer.  Figures were created in Inkscape, plots in R using ggplot2.
 \end{abstract}
 
 %%% Local Variables:
