--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -242,7 +242,7 @@
 }
 \makeatother
 
-\newcommand{\juliapackage}[1]{\texttt{#1}}
+\newcommand{\juliapackage}[1]{\href{https://github.com/search?q=#1&type=Repositories}{\texttt{#1}}}
 \newcommand{\turingjl}{\juliapackage{Turing.jl}}
 \newcommand{\irtrackerjl}{\juliapackage{IRTracker.jl}}
 \newcommand{\autogibbsjl}{\juliapackage{AutoGibbs.jl}}
@@ -262,7 +262,7 @@
 \pagestyle{plain}
 \frontmatter
 
-\setcounter{page}{1} % titlingpage resets to 1 afterwards
+\setcounter{page}{1} % titling page resets to 1 afterwards
 \include{title}
 \setcounter{page}{3}
 
@@ -304,7 +304,7 @@
 \tableofcontents*
 \endgroup
 
-% \include{acknowledgemnt.text}
+% \include{acknowledgements}
 
 \include{notation}
 
