--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -377,6 +377,14 @@
   series = {Wiley Series in Probability and Statistics}
 }
 
+@online{copyright,
+  title = {Copyright - {{Is}} the Source Important for Fair Use?},
+  url = {https://law.stackexchange.com/questions/58740/is-the-source-important-for-fair-use},
+  urldate = {2020-11-30},
+  file = {/home/philipp/Zotero/storage/3L7GXFLR/is-the-source-important-for-fair-use.html},
+  organization = {{Law Stack Exchange}}
+}
+
 @unpublished{coqdevelopmentteam2010coq,
   title = {The {{Coq}} Proof Assistant: {{Reference}} Manual},
   author = {Coq Development Team, The},
