--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -535,58 +535,107 @@ end
     technicality due to \turingjl{}'s handling of nonparametric models.  The function
     \texttt{stickbreak} normalizes the stick-lengths \texttt{v} into a Dirichlet-like distribution.
     The \texttt{Categorical(p)} constructor automatically infers the support of the categorical
-    distribution from the weights as \texttt{1:length(p)}.}
+    distribution from the weight vector as \texttt{1:length(p)}.}
   \label{lst:evaluation-models}
 \end{lstfloat}
 The three interesting classes of metrics to evaluate are, in the case of this work,
 \begin{enumerate}
   \firmlist
-\item the \enquote{compilation time} of \autogibbsjl{}, i.e., the time it takes to extract a
-  conditional,
+\item the \enquote{extraction time} of \autogibbsjl{}, i.e., the time it takes to extract and a
+  conditional including compilation times,
 \item the sampling speed when used as component of a within-Gibbs sampler, and
 \item the quality of the resulting chains, in terms of convergence and variance diagnostics.
   (Although this really measures Gibbs sampling, not the implementation of \autogibbsjl{}, it is a
   relevant comparison for the practitioner.)
 \end{enumerate}
-Each of the test models involves one discrete and two continuous parameters.  As benchmark for
-\autogibbsjl{}'s static conditional (AG), it is compared to \turingjl{}'s Particle Gibbs sampler
-(PG), which is also suited to discrete parameters.  Continuous variables are all sampled using
-Hamiltonian Monte Carlo (HMC) with hand-tuned parameters per model.  The experiments have been set
-up such that each model is evaluated for ten chains of length \(10000\), varying between AG and PG,
-and four different values for the number of observations (since these determine the size of the
-trace, and thus have an influence on both AG's compile times and the overall sampling time).  PG was
-always used with \(100\) particles, since lower values did lead to convergent chains.  Experiments
-were conducted on XY, and performed single-threaded with exclusive resource usage.  The PG-runs with
-50 observations were not completed due to the twelve hour time limit of the server.\todo{describe
-  hardware}
+To estimate them, a series of experiments has been conducted.  Each of the test models involves one
+discrete and two continuous parameters.  As a baseline for \autogibbsjl{}'s static conditional (AG),
+\turingjl{}'s Particle Gibbs sampler (PG) was chosen, which is also suited to discrete parameters.
+PG was always used with \(100\) particles, since lower values did not lead to convergent chains.
+Continuous variables were all sampled using Hamiltonian Monte Carlo (HMC) with hand-tuned parameters
+(\(10\) leapfrog steps with step size \(0.05\)).  The experiments have been set up to vary between
+AG and PG, and between \(10\), \(25\), and \(50\) observations, since these determine the size of
+the trace, and thus have an influence on both AG's compile times and the overall sampling time.  All
+measurements were conducted using the following system configuration, as shown by
+\jlinl{InteractiveUtils.versioninfo}:
+\begin{lstlisting}
+Julia Version 1.3.1
+Commit 2d5741174c (2019-12-30 21:36 UTC)
+Platform Info:
+  OS: Linux (x86_64-pc-linux-gnu)
+  CPU: Intel(R) Core(TM) i5-4690 CPU @ 3.50GHz
+  WORD_SIZE: 64
+  LIBM: libopenlibm
+  LLVM: libLLVM-6.0.1 (ORCJIT, haswell)
+\end{lstlisting}
+Everything was executed single-threaded, with exclusive resource access on the server, to preclude
+measurement noise as much as possible.  Each of the three models was benchmarked in a separate Julia
+session.  The last two chains of IMM with \(50\) observations using Particle Gibbs could not be
+completed, due to the twelve hour time limit set by the job scheduler.
 
-Concrete parameters in table~\ref{tab:autogibbs-params}.\todo{more meaningful table}
+\cleartoverso
 
-\begin{table}[t]
+\begin{figure}[p]
   \centering
-  \libertineTabular
-  \begin{tabularx}{\textwidth}{XXrrr@{\hskip 10mm}rrrr}
-    \toprule
-     & & \multicolumn{3}{c@{\hskip 10mm}}{\textbf{GMM}} & \multicolumn{3}{c}{\textbf{HMM}} & \multicolumn{1}{c}{\textbf{IMM}} \\
-    \midrule
-    & HMC Step size & & 0.05 & & & 0.05 & & 0.05 \\
-    & HMC Steps & & 10 & & & 10 & & 10 \\
-    \midrule
-    \textbf{AG + HMC} & Observations & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
-    & Chains & 30 & 30 & 30 & 30 & 30 & 30 & 30 \\
-    & Compilations & 3 & 3 & 3 & 3 & 3 & 3 & 3 \\
-    \addlinespace
-    \textbf{PG + HMC,} & Observations & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
-     & Chains & 10 & 10 & 10 & 10 & 10 & 10 & 10 \\
-    \bottomrule
-  \end{tabularx}
-  \caption{Experimental conditions for evaluating AutoGibbs (AG) against Particle Gibbs (PG).  Chains
-    were always of length \(10000\).  A new static Gibbs conditional was extracted for each block of
-    \(10\) chains that was run with the same parameters while Particle Gibbs was varied over the
-    three particle sizes.  Particle Gibbs with 50 particles was sometimes killed due to timeouts on
-    the server.}
-  \label{tab:autogibbs-params}
-\end{table}
+  \includegraphics[width=0.49\textwidth]{figures/GMM-sampling_times}
+  \includegraphics[width=0.49\textwidth]{figures/GMM-compile_times}
+  \caption{Extraction and sampling times.}
+  \label{fig:extraction-sampling}
+\end{figure}
+
+\cleartorecto
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=0.49\textwidth]{figures/GMM-rhat}
+  \includegraphics[width=0.49\textwidth]{figures/GMM-ess}
+  \caption{Convergence diagnostics.}
+  \label{fig:convergence_diagnostics}
+\end{figure}
+
+\cleartoverso
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\textwidth]{figures/GMM-chains}
+  \caption{Chains.}
+  \label{fig:chains}
+\end{figure}
+
+\cleartorecto
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\textwidth]{figures/GMM-acfs}
+  \caption{Autocorrelation estimates.}
+  \label{fig:chains}
+\end{figure}
+
+% \begin{table}[t]
+%   \centering
+%   \libertineTabular
+%   \begin{tabularx}{\textwidth}{XXrrr@{\hskip 10mm}rrrr}
+%     \toprule
+%      & & \multicolumn{3}{c@{\hskip 10mm}}{\textbf{GMM}} & \multicolumn{3}{c}{\textbf{HMM}} & \multicolumn{1}{c}{\textbf{IMM}} \\
+%     \midrule
+%     & HMC Step size & & 0.05 & & & 0.05 & & 0.05 \\
+%     & HMC Steps & & 10 & & & 10 & & 10 \\
+%     \midrule
+%     \textbf{AG + HMC} & Observations & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
+%     & Chains & 30 & 30 & 30 & 30 & 30 & 30 & 30 \\
+%     & Compilations & 3 & 3 & 3 & 3 & 3 & 3 & 3 \\
+%     \addlinespace
+%     \textbf{PG + HMC,} & Observations & 10 & 25 & 50 & 10 & 25 & 50 & 10 \\
+%      & Chains & 10 & 10 & 10 & 10 & 10 & 10 & 10 \\
+%     \bottomrule
+%   \end{tabularx}
+%   \caption{Experimental conditions for evaluating AutoGibbs (AG) against Particle Gibbs (PG).  Chains
+%     were always of length \(10000\).  A new static Gibbs conditional was extracted for each block of
+%     \(10\) chains that was run with the same parameters while Particle Gibbs was varied over the
+%     three particle sizes.  Particle Gibbs with 50 particles was sometimes killed due to timeouts on
+%     the server.}
+%   \label{tab:autogibbs-params}
+% \end{table}
 
 
 
