--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -579,6 +579,9 @@ completed, due to the twelve hour time limit set by the job scheduler.
   \centering
   \includegraphics[width=0.49\textwidth]{figures/GMM-sampling_times}
   \includegraphics[width=0.49\textwidth]{figures/GMM-compile_times}
+  \par
+  \includegraphics[width=0.49\textwidth]{figures/HMM-sampling_times}
+  \includegraphics[width=0.49\textwidth]{figures/HMM-compile_times}
   \caption{Extraction and sampling times.}
   \label{fig:extraction-sampling}
 \end{figure}
@@ -589,6 +592,9 @@ completed, due to the twelve hour time limit set by the job scheduler.
   \centering
   \includegraphics[width=0.49\textwidth]{figures/GMM-rhat}
   \includegraphics[width=0.49\textwidth]{figures/GMM-ess}
+  \par
+  \includegraphics[width=0.49\textwidth]{figures/HMM-rhat}
+  \includegraphics[width=0.49\textwidth]{figures/HMM-ess}
   \caption{Convergence diagnostics.}
   \label{fig:convergence_diagnostics}
 \end{figure}
@@ -598,6 +604,8 @@ completed, due to the twelve hour time limit set by the job scheduler.
 \begin{figure}[p]
   \centering
   \includegraphics[width=\textwidth]{figures/GMM-chains}
+  \par
+  \includegraphics[width=\textwidth]{figures/HMM-chains}
   \caption{Chains.}
   \label{fig:chains}
 \end{figure}
@@ -607,6 +615,8 @@ completed, due to the twelve hour time limit set by the job scheduler.
 \begin{figure}[p]
   \centering
   \includegraphics[width=\textwidth]{figures/GMM-acfs}
+  \par
+  \includegraphics[width=\textwidth]{figures/HMM-acfs}
   \caption{Autocorrelation estimates.}
   \label{fig:chains}
 \end{figure}
