Describe meaning of plots, reorder them

--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -549,7 +549,7 @@
 
 @article{gelman1992inference,
   title = {Inference from {{Iterative Simulation Using Multiple Sequences}}},
-  author = {Gelman, Andrew and {work(s):}, Donald B. Rubin Reviewed},
+  author = {Gelman, Andrew and Rubin, Donald B.},
   date = {1992},
   journaltitle = {Statistical Science},
   volume = {7},
@@ -560,6 +560,16 @@
   file = {/home/philipp/Zotero/storage/HKYSQLA5/Gelman and work(s) - 1992 - Inference from Iterative Simulation Using Multiple.pdf},
   langid = {english},
   number = {4}
+}
+
+@book{gelman2020bayesian,
+  title = {Bayesian {{Data Analysis}}},
+  author = {Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
+  date = {2020},
+  edition = {3rd},
+  url = {http://www.stat.columbia.edu/~gelman/book/},
+  file = {/home/philipp/Zotero/storage/ERU9AB37/Gelman et al. - Bayesian Data Analysis Third edition (with errors .pdf},
+  langid = {english}
 }
 
 @article{geman1984stochastic,
