--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -429,17 +429,104 @@ other within-Gibbs samplers, since they only involve evaluating a fixed expressi
 distribution, and sampling from it once (and even this could be sped up further).  This makes it
 possible to sample much longer chains in the same time, which is an overall advantage.
 
-So, to conclude, while the implementation in current form is not very applicable in practice for all
-cases, it is very much so in principle.  Based on the lessons learned through this work, further
-contributions to Gibbs sampling in \turingjl{} are already planned (although not necessarily based
-on \autogibbsjl{}).
+Furthermore, due to the limitations \autogibbsjl{} puts on the structure of variable names, there
+are cases in which models cannot be formulated in a certain desirable way in \dppljl{}, thus losing
+certain advantages such as block-wise treatment of collections of independent variables.  This can
+lead to a disadvantage compared to other samplers.  Again, the restrictions are mostly a detail of
+the current implementation, and there is no theoretical hindrance in overcoming than.
+
+So, to conclude, while the implementation in current form is not applicable in practice for all
+possible cases, it is very much so in principle.  Based on the lessons learned through this work,
+further contributions to Gibbs sampling in \turingjl{} are already planned (although not necessarily
+based on \autogibbsjl{}).
 
 \newthought{For a more {q}uantitative} point of view, let us now turn to some empirical evaluations.
 Besides several unit tests for correctness of the derived dependencies and conditionals on a variety
-of models chosen to test certain features and corner cases, an experimental comparison of
-\autogibbsjl{} and existing \turingjl{} samplers has been conducted.  For this purpose, three
-off-the-shelf Bayesian models were chosen: a Gaussian mixture model (GMM) with known variances and
-priors over cluster centers, weights, and assignments \parencite[section 6.2]{marin2007bayesian},
+of small models chosen to test certain features and corner cases, an experimental comparison of
+\autogibbsjl{} and existing \turingjl{} samplers has been conducted.  Three off-the-shelf Bayesian
+models were chosen: a Gaussian mixture model (GMM) with known variances and priors over cluster
+centers, weights, and assignments \parencite[section 6.2]{marin2007bayesian}, a hidden Markov model
+(HMM) with known variances and priors over transition and emission probabilities \parencite[section
+7.3]{marin2007bayesian}, and an infinite mixture model (IMM) in stick-breaking construction, but
+otherwise of the same form as the GMM, to represent a nonparametric example \parencite[section
+2.2]{hjort2010bayesian}.  The models are implemented in \dppljl{} as shown in
+listing~\ref{lst:evaluation-models}.
+
+The three interesting classes of metrics to evaluate are, in the case of this work,
+\begin{enumerate}
+  \firmlist
+\item the \enquote{extraction time} of \autogibbsjl{}, i.e., the time it takes to extract and a
+  conditional including compilation times,
+\item the sampling speed when used as component of a within-Gibbs sampler, and
+\item the quality of the resulting chains, in terms of convergence and variance diagnostics.
+  (Although this really measures Gibbs sampling, not the implementation of \autogibbsjl{}, it is a
+  relevant comparison for the practitioner.)
+\end{enumerate}
+To estimate them, a series of experiments has been conducted.  Each of the test models involves one
+discrete and two continuous parameters.  As a baseline for \autogibbsjl{}'s static conditional (AG),
+\turingjl{}'s Particle Gibbs sampler (PG) was chosen, which is also suited to discrete parameters.
+PG was always used with \(100\) particles, since lower values did not lead to convergent chains.
+Continuous variables were all sampled using Hamiltonian Monte Carlo (HMC) with hand-tuned parameters
+(\(10\) leapfrog steps with step size \(0.05\)).  The experiments have been set up to vary between
+AG and PG, and between \(10\), \(25\), and \(50\) observations, since these determine the size of
+the trace, and thus have an influence on both AG's compile times and the overall sampling time.  All
+measurements were conducted using the following system configuration, as shown by
+\jlinl{InteractiveUtils.versioninfo}:
+\begin{lstlisting}
+Julia Version 1.3.1
+Commit 2d5741174c (2019-12-30 21:36 UTC)
+Platform Info:
+  OS: Linux (x86_64-pc-linux-gnu)
+  CPU: Intel(R) Core(TM) i5-4690 CPU @ 3.50GHz
+  WORD_SIZE: 64
+  LIBM: libopenlibm
+  LLVM: libLLVM-6.0.1 (ORCJIT, haswell)
+\end{lstlisting}
+Everything was executed single-threaded, with exclusive resource access on the server, to preclude
+measurement noise as much as possible.  Each of the three models was benchmarked in a separate Julia
+session.  The last two chains of the HMM with \(50\) observations using Particle Gibbs could not be
+completed, due to the twelve hour time limit set by the job scheduler.
+
+If follows a detailed analysis of the results per model in graphical form, based on six plots each.
+First, PG and AG are compared in terms of sampling times by number of observations on the top left.
+Right of this, we have the dependency of the extraction time of AG given the number observations.
+The first of these points is almost always an outlier, since it involves additional compilation
+time.  Through the rest, quadratic a quadratic function is fitted, which always matched the values
+very closely.  \todo{fix x-axis for extraction time plots; remove intercept} On the facing page,
+plots for convergence analysis are visualized.  On the top, the first chain of each combination is
+shown as a qualitative representative (thinned for easier plotting).  Well-converging chains should
+look like white noise, not like a random walk.  Below, the estimated autocorrelation function of the
+same chains is given; these should decrease as quickly as possible to indicate good convergence
+(uncorrelated variables would have zero autocorrelation except for zero lag).\todo{ACF on unthinned
+  chains!}
+
+Lastly, two diagnostic values are plotted for each combination and chain.  The
+\enquote{scale-reduction} \(\hat{R}\), after \textcite{gelman1992inference}, estimates the factor by
+which the scale of the current distribution might be reduced if the simulations were continued
+\parencite[see][p. 285]{gelman2020bayesian}.  It should be close to \(1\) for indicating good
+convergence; as a rule of thumb, a value of more than \(1.1\) is suspicious.  The effective sample
+size (ESS) arises in the estimation of the asymptotic variance of Markov chains
+\parencite[see][section 7.2]{vihola2020lectures}, where it is formally analogous to the sample size
+in the variance estimator for \iid{} Gaussian variables.  The ESS can also be interpreted as a
+one-point summary of the autocorrelation estimate, normalized by chain length.  It should be close
+to the actual number of samples, or at least of the same order of magnitude.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoverso
+\FloatBlock
+
+\begin{figure}[t!]
+  \centering
+  \includegraphics[width=0.49\textwidth]{figures/GMM-sampling_times}
+  \includegraphics[width=0.49\textwidth]{figures/GMM-compile_times}
+  \caption{Sampling and extraction times for GMM.  Points jittered horizontally to increase
+    readability.  A quadratic curve is fit to the extraction times.}
+  \label{fig:plots-gmm}
+\end{figure}
+
+\subsection*{GMM}
+
+The Gaussian mixture model was of the following form:
 \begin{equation}
   \label{eq:gmm}
   \begin{aligned}
@@ -449,8 +536,35 @@ priors over cluster centers, weights, and assignments \parencite[section 6.2]{ma
     x_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{1}), \quad n = 1, \ldots, N;
   \end{aligned}
 \end{equation}
-a hidden Markov model (HMM) with known variances and priors over transition and emission
-probabilities \parencite[section 7.3]{marin2007bayesian},
+
+\cleartorecto
+\FloatBlock
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\textwidth]{figures/GMM-chains}
+  \par
+  \includegraphics[width=\textwidth]{figures/GMM-acfs}
+  \par
+  \includegraphics[width=0.49\textwidth]{figures/GMM-rhat}
+  \includegraphics[width=0.49\textwidth]{figures/GMM-ess}
+  \contcaption{Extraction and sampling times.}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoverso
+\FloatBlock
+
+\begin{figure}[t!]
+  \centering
+    \includegraphics[width=0.49\textwidth]{figures/HMM-sampling_times}
+  \includegraphics[width=0.49\textwidth]{figures/HMM-compile_times}
+  \contcaption{Extraction and sampling times.}
+  \label{fig:plots-hmm}
+\end{figure}
+
+\subsection*{HMM}
+
 \begin{equation}
   \label{eq:hmm}
   \begin{aligned}
@@ -461,9 +575,35 @@ probabilities \parencite[section 7.3]{marin2007bayesian},
     x_{k} &\from \Normal(m_{s_{k}}, \sigma_{2}), \quad k = 1, \ldots, N;
   \end{aligned}
 \end{equation}
-and an infinite mixture model (IMM) in stick-breaking construction, but otherwise of the same form
-as the finite GMM above, to represent a nonparametric example \parencite[section
-2.2]{hjort2010bayesian}:
+
+\cleartorecto
+\FloatBlock
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\textwidth]{figures/HMM-chains}
+  \par
+  \includegraphics[width=\textwidth]{figures/HMM-acfs}
+  \par
+  \includegraphics[width=0.49\textwidth]{figures/HMM-rhat}
+  \includegraphics[width=0.49\textwidth]{figures/HMM-ess}
+  \caption{Extraction and sampling times.}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoverso
+\FloatBlock
+
+\begin{figure}[t!]
+  \centering
+  \includegraphics[width=0.49\textwidth]{figures/IMM-sampling_times}
+  \includegraphics[width=0.49\textwidth]{figures/IMM-compile_times}
+  \caption{Extraction and sampling times.}
+  \label{fig:plots-imm}
+\end{figure}
+
+\subsection*{IMM}
+
 \begin{equation}
   \label{eq:imm}
   \begin{aligned}
@@ -473,7 +613,21 @@ as the finite GMM above, to represent a nonparametric example \parencite[section
     y_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{2}), \quad n = 1, \ldots, N.
   \end{aligned}
 \end{equation}
-The models are implemented in \dppljl{} as shown in listing~\ref{lst:evaluation-models}.
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\textwidth]{figures/IMM-chains}
+  \par
+  \includegraphics[width=\textwidth]{figures/IMM-acfs}
+  \par
+  \includegraphics[width=0.49\textwidth]{figures/IMM-rhat}
+  \includegraphics[width=0.49\textwidth]{figures/IMM-ess}
+  \caption{Convergence diagnostics for }
+\end{figure}
+
+\FloatBlock
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{lstfloat}[p]
 \begin{lstlisting}[style=lstfloat]
 @model function gmm(x, K)
@@ -538,127 +692,6 @@ end
     distribution from the weight vector as \texttt{1:length(p)}.}
   \label{lst:evaluation-models}
 \end{lstfloat}
-The three interesting classes of metrics to evaluate are, in the case of this work,
-\begin{enumerate}
-  \firmlist
-\item the \enquote{extraction time} of \autogibbsjl{}, i.e., the time it takes to extract and a
-  conditional including compilation times,
-\item the sampling speed when used as component of a within-Gibbs sampler, and
-\item the quality of the resulting chains, in terms of convergence and variance diagnostics.
-  (Although this really measures Gibbs sampling, not the implementation of \autogibbsjl{}, it is a
-  relevant comparison for the practitioner.)
-\end{enumerate}
-To estimate them, a series of experiments has been conducted.  Each of the test models involves one
-discrete and two continuous parameters.  As a baseline for \autogibbsjl{}'s static conditional (AG),
-\turingjl{}'s Particle Gibbs sampler (PG) was chosen, which is also suited to discrete parameters.
-PG was always used with \(100\) particles, since lower values did not lead to convergent chains.
-Continuous variables were all sampled using Hamiltonian Monte Carlo (HMC) with hand-tuned parameters
-(\(10\) leapfrog steps with step size \(0.05\)).  The experiments have been set up to vary between
-AG and PG, and between \(10\), \(25\), and \(50\) observations, since these determine the size of
-the trace, and thus have an influence on both AG's compile times and the overall sampling time.  All
-measurements were conducted using the following system configuration, as shown by
-\jlinl{InteractiveUtils.versioninfo}:
-\begin{lstlisting}
-Julia Version 1.3.1
-Commit 2d5741174c (2019-12-30 21:36 UTC)
-Platform Info:
-  OS: Linux (x86_64-pc-linux-gnu)
-  CPU: Intel(R) Core(TM) i5-4690 CPU @ 3.50GHz
-  WORD_SIZE: 64
-  LIBM: libopenlibm
-  LLVM: libLLVM-6.0.1 (ORCJIT, haswell)
-\end{lstlisting}
-Everything was executed single-threaded, with exclusive resource access on the server, to preclude
-measurement noise as much as possible.  Each of the three models was benchmarked in a separate Julia
-session.  The last two chains of IMM with \(50\) observations using Particle Gibbs could not be
-completed, due to the twelve hour time limit set by the job scheduler.
-
-\cleartoverso
-\FloatBlock
-
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=0.49\textwidth]{figures/GMM-sampling_times}
-  \includegraphics[width=0.49\textwidth]{figures/GMM-compile_times}
-  \par
-  \includegraphics[width=0.49\textwidth]{figures/GMM-rhat}
-  \includegraphics[width=0.49\textwidth]{figures/GMM-ess}
-  \par
-  \includegraphics[width=\textwidth]{figures/GMM-chains}
-  \caption{Extraction and sampling times.}
-\end{figure}
-
-\cleartorecto
-\FloatBlock
-
-\begin{figure}[t]
-  \centering
-  \includegraphics[width=\textwidth]{figures/GMM-acfs}
-  \contcaption{Extraction and sampling times.}
-  \label{fig:plots-gmm}
-\end{figure}
-
-\subsection*{GMM}
-
-bla bla bla...
-
-\cleartoverso
-\FloatBlock
-
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=0.49\textwidth]{figures/HMM-sampling_times}
-  \includegraphics[width=0.49\textwidth]{figures/HMM-compile_times}
-  \par
-  \includegraphics[width=0.49\textwidth]{figures/HMM-rhat}
-  \includegraphics[width=0.49\textwidth]{figures/HMM-ess}
-  \par
-  \includegraphics[width=\textwidth]{figures/HMM-chains}
-  \caption{Extraction and sampling times.}
-\end{figure}
-
-\cleartorecto
-\FloatBlock
-
-\begin{figure}[t]
-  \centering
-  \includegraphics[width=\textwidth]{figures/HMM-acfs}
-  \contcaption{Extraction and sampling times.}
-  \label{fig:plots-hmm}
-\end{figure}
-
-\subsection*{HMM}
-
-bla bla bla...
-
-\cleartoverso
-\FloatBlock
-
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=0.49\textwidth]{figures/IMM-sampling_times}
-  \includegraphics[width=0.49\textwidth]{figures/IMM-compile_times}
-  \par
-  \includegraphics[width=0.49\textwidth]{figures/IMM-rhat}
-  \includegraphics[width=0.49\textwidth]{figures/IMM-ess}
-  \par
-  \includegraphics[width=\textwidth]{figures/IMM-chains}
-  \caption{Extraction and sampling times.}
-\end{figure}
-
-\cleartorecto
-\FloatBlock
-
-\begin{figure}[t]
-  \centering
-  \includegraphics[width=\textwidth]{figures/IMM-acfs}
-  \contcaption{Extraction and sampling times.}
-  \label{fig:plots-imm}
-\end{figure}
-
-\subsection*{IMM}
-
-bla bla bla...
 
 % \begin{table}[t]
 %   \centering
